// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalPicker should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#808D9B",
      "borderRadius": 4,
      "borderWidth": 0.5,
      "flexDirection": "column",
      "justifyContent": "space-between",
      "width": 150,
    }
  }
>
  <SmoothPicker
    data={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
      ]
    }
    horizontal={true}
    initialNumToRender={0}
    keyExtractor={[Function]}
    onSelected={[Function]}
    refFlatList={
      Object {
        "current": null,
      }
    }
    removeClippedSubviews={true}
    renderItem={[Function]}
    showsHorizontalScrollIndicator={false}
  />
</View>
`;

exports[`Item should match snapshot when selected is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderWidth": 0.5,
        "height": 40,
        "justifyContent": "center",
        "marginBottom": 3,
        "marginTop": 3,
      },
      Object {
        "borderBottomColor": "transparent",
        "borderColor": "transparent",
        "borderTopColor": "transparent",
        "opacity": 0,
        "width": 50,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#9A99A2",
      }
    }
    textType="regular"
    type="small"
  />
</View>
`;

exports[`Item should match snapshot when selected is true 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderWidth": 0.5,
        "height": 40,
        "justifyContent": "center",
        "marginBottom": 3,
        "marginTop": 3,
      },
      Object {
        "borderBottomColor": "transparent",
        "borderColor": "#808D9B",
        "borderTopColor": "transparent",
        "opacity": 0,
        "width": 50,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#0084F8",
      }
    }
    textType="bold"
    type="regular"
  />
</View>
`;

exports[`Item to Render should match snapshot 1`] = `
<Item
  opacity={0.8}
  selected={false}
  value={0}
/>
`;
